# VIP_Weather

./: .clang-format  README.md  WeatherStationHome.html  package-lock.json  platformio.ini
api/: .gitignore  index.js  index.ts  package-lock.json  package.json  tsconfig.json
bradley_cast/: README.md
bradley_cast/bradley_cast/: .clang-format  .gitignore  CMakeLists.txt  bradley_cast.c  bradley_cast.h  bradley_cast_defs.h  env_msg.c  env_msg.h
bradley_cast/bradley_cast/test/: CMakeLists.txt  main.c
broker/: README.md
broker/broker/: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp  start-broker.sh
broker/broker/include/: MessageParse.h  MessageResponse.h  WeatherData.h  broker.h  broker_database.h  constants.h  utils.h  wslogger.h
broker/broker/src/: MessageParse.cpp  broker.cpp  broker_database.cpp  utils.cpp  wslogger.cpp
broker/broker/test/: test.cpp
data-sim/: README.md  WSDataSim.py
firmware/: platformio.ini
firmware/include/: secrets.h  weather_station.h
firmware/src/: main.cpp  weather_station.cpp
include/: weather_station.h  weather_station_defs.h
max31865-rtd-board/: fp-info-cache  fp-lib-table  sym-lib-table  weather-station-rtd.kicad_pcb  weather-station-rtd.kicad_prl  weather-station-rtd.kicad_pro  weather-station-rtd.kicad_sch
max31865-rtd-board/fab/: weather-station-rtd-NPTH.drl  weather-station-rtd-PTH.drl
max31865-rtd-board/fab/R00/: weather-station-rtd-B_Courtyard.gbr  weather-station-rtd-B_Cu.gbr  weather-station-rtd-B_Mask.gbr  weather-station-rtd-B_Paste.gbr  weather-station-rtd-B_Silkscreen.gbr  weather-station-rtd-Edge_Cuts.gbr  weather-station-rtd-F_Courtyard.gbr  weather-station-rtd-F_Cu.gbr  weather-station-rtd-F_Mask.gbr  weather-station-rtd-F_Paste.gbr  weather-station-rtd-F_Silkscreen.gbr  weather-station-rtd-NPTH.drl  weather-station-rtd-PTH.drl  weather-station-rtd-job.gbrjob
server_configs/: README.md  weather-station  weather-station-api
src/: main.cpp  weather_station.c  weather_station.cpp
website/: README.md  README.txt  index.html  package-lock.json  package.json
website/app/: layout.tsx  page.tsx
website/app/about/: page.tsx
website/app/contact/: page.tsx
website/app/data-collection/: page.tsx
website/app/documentation/: page.tsx
website/app/lib/: fetch-nws.ts
website/app/news/: page.tsx
website/app/ui/: alert.tsx  fonts.ts  layout.tsx  line-graph.tsx  page.tsx  (+8 more)
website/public/: note.txt
ws-control-board/ws-control-board/: .gitignore  fp-info-cache  fp-lib-table  sym-lib-table  ws-control-board.kicad_pcb  ws-control-board.kicad_prl  ws-control-board.kicad_pro  ws-control-board.kicad_sch  ws-control-board.kicad_sch-bak
(+20 files in other folders)
